--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@luizffgv/ts-conversions": "1.0.0",
+    "copy-webpack-plugin": "12.0.2",
     "css-loader": "6.8.1",
     "handlebars-loader": "1.7.3",
     "highlight.js": "11.9.0",
